# pds-ii-desafio-final

./: CMakeLists.txt  CMakeSettings.json  Livro.cpp  Livro.hpp  Menu.cpp  README.md  main.cpp
GerenciamentoBiblioteca/: Admin.cpp  Admin.hpp  Cliente.cpp  Livro.cpp  Livro.hpp  Pessoa.cpp
Sistema/: Login.cpp
Sistemas/: Menu.cpp
database/: Connection.cpp  Repository.cpp
database/interfaces/: Connection.hpp  Repository.hpp
gerenciamento/: Admin.cpp  Admin.hpp  Cliente.cpp  Cliente.hpp  Pessoa.cpp  Pessoa.hpp
meu teste/: main.cpp  mocklivro.cpp  my_code.cpp  my_test.cpp
model/: Book.cpp  Book.hpp  Livro.cpp  Livro.hpp
system/: Login.cpp  Login.hpp  Menu.cpp  Menu.hpp
